build(build-config-split): split build.gradle into multiple files and improve re-usability (#103)
- Split build.gradle into separate files under <project_root>/gradle.
 - Remove duplicated plugin configurations.
 - Add common-plugins internal plugin to handle common plugins.
 - Improve dependency management by better utilizing io.spring.dependency-management plugin.
 - Replace log4j with logback as slf4j logger implementation due to its superiority in many aspects.
 - Extract common dependencies in common-dependecies.gradle file.

Resolves: #75

Signed-off-by: Tsvetan Dimitrov <tsvetan.dimitrov@consensys.net>